assets/client/ripple.css
/* ... */
.skan-dialog-field-set input[type=text] {
    width: 300px;
}

.barcode-overlay {
    z-index: 10000;
    width: 100%;
    height: 100%;
    display: none;
    background-color: white;
}

.barcode-close {
    z-index: 10000;
    width: 100%;
    height: 100%;
}

.barcode-image {
    z-index: 10000;
    width: 100%;
}

.barcode-data {
    z-index: 10000;
    text-align: center;
    font-family: Tahoma, Geneva, sans-serif;
    font-size: 25px;
    color: black;
    padding: 20px;
    background-color: white;
}
/* END - RIPPLE-71 Barcode Scanner styles */

/* START - RIPPLE-76 Warning for "Remote" proxy */
#remote-proxy-warn {
    padding: 5px;
    border: 2px solid gold;
}

#remote-proxy-warn-message {
    margin: 20px 0px -15px 0px;
}

.ui-warn-text-label {
    font-weight: bold;
    color: goldenrod;
}

.remote-proxy-warn-icon-container {
    color:  goldenrod;
    float: left;
}
.remote-proxy-warn-icon-name {
    position: absolute;
    margin: 1px 0px 0px 20px;
}
/* END - RIPPLE-76 Warning for "Remote" proxy */

